@@ -2,6 +2,7 @@
 Version: 5.2.10
 Date: ????
   Bugfixes:
+    - Fixed requests not being set properly
     - Fixed button and textfields showing nothing if request is 0 and trash is unlimited
 ---------------------------------------------------------------------------------------------------
 Version: 5.2.9
